--- a/PhoenixTravelAgencyPro/.settings/org.eclipse.wst.common.component
+++ b/PhoenixTravelAgencyPro/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="PhoenixTravelAgencyPro">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="/PhoenixTravelAgencyPro"/>
         <property name="java-output-path" value="/PhoenixTravelAgencyPro/WebRoot/WEB-INF/classes"/>
     </wb-module>
